--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Hello World!</string>
-    <string name="hello_message">hello_message</string>
+    <string name="app_name">AndroidLabs</string>
+    <string name="hello_message">Hello World!</string>
     <string name="ButtonText">I\’m a button</string>
 </resources>
