--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="Lab2">lab2</string>
-    <string name="Hello_message">Look at my GUI</string>
-    <string name="ButtonText">I\’m a button</string>
-    <string name="CheckBoxText">Check this out!</string>
-    <drawable name="ImageButton">@drawable/flag</drawable>
-    <string name="Switch">Switch on/off</string>
-    <string name="EditText">Type Here</string>
-    <string name="toast_message">Here is more information</string>
-    <string name="snack_message1">Check Box is </string>
-    <string name="snack_message2">Switch is </string>
+    <string name="Lab3">Lab3</string>
+    <string name="Lab3TextView1">Enter your email address:</string>
+    <string name="Lab3TextView2">Enter your password:</string>
+    <string name="Lab3EmailHint">Type email here:</string>
+    <string name="Lab3LoginBtnText">Login</string>
+    <string name="ProfileText">Your profile</string>
+    <string name="NameText">Your name:</string>
+    <string name="NameHintText">Enter your name</string>
+    <string name="EmailTextViewText">Your email:</string>
+    <string name="EmailHintText">Enter your email</string>
+    <string name="PictureTextView">Your picture:</string>
+    <string name="ImagePictureTextView">Click the button above to take a picture</string>
+
 </resources>
