--- a/app/src/main/res/values-en-rCA/strings.xml
+++ b/app/src/main/res/values-en-rCA/strings.xml
@@ -1,16 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="Lab3">Lab3</string>
-    <string name="Lab3TextView1">Enter your email address:</string>
-    <string name="Lab3TextView2">Enter your password:</string>
-    <string name="Lab3EmailHint">Type email here:</string>
-    <string name="Lab3LoginBtnText">Login</string>
-    <string name="ProfileText">Your profile</string>
-    <string name="NameText">Your name:</string>
-    <string name="NameHintText">Enter your name</string>
-    <string name="EmailTextViewText">Your email:</string>
-    <string name="EmailHintText">Enter your email</string>
-    <string name="PictureTextView">Your picture:</string>
-    <string name="ImagePictureTextView">Click the button above to take a picture</string>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="app_name" tools:ignore="MissingTranslation">AndroidLabs</string>
+    <string name="hello_message" tools:ignore="MissingTranslation">Hello World</string>
+    <string name="ButtonText" tools:ignore="MissingTranslation">I\'m a button</string>
+    <string name="ButtonText2" tools:ignore="MissingTranslation">Button</string>
+    <string name="CheckBoxText" tools:ignore="MissingTranslation">Check this out!</string>
+    <string name="SwitchText" tools:ignore="MissingTranslation">Switch on / off</string>
+    <string name="EditText" tools:ignore="MissingTranslation">Type your answer here</string>
+    <string name="TextViewText" tools:ignore="MissingTranslation">Here are my widgets:</string>
+    <string name="Lab3TextView1" tools:ignore="MissingTranslation">Enter your email address:</string>
+    <string name="Lab3TextView2" tools:ignore="MissingTranslation">Enter your password:</string>
+    <string name="Lab3EmailHint" tools:ignore="MissingTranslation">Type email here:</string>
+    <string name="Lab3LoginBtnText" tools:ignore="MissingTranslation">Login</string>
+    <string name="ProfileText" tools:ignore="MissingTranslation">Your profile</string>
+    <string name="NameText" tools:ignore="MissingTranslation">Your name:</string>
+    <string name="NameHintText" tools:ignore="MissingTranslation">Enter your name</string>
+    <string name="EmailTextViewText" tools:ignore="MissingTranslation">Your email:</string>
+    <string name="EmailHintText" tools:ignore="MissingTranslation">Enter your email</string>
+    <string name="PictureTextView" tools:ignore="MissingTranslation">Your picture:</string>
+    <string name="ImagePictureTextView" tools:ignore="MissingTranslation">Click the button above to take a picture</string>
+    <string name="GoToChatText" tools:ignore="MissingTranslation">Go To Chat</string>
+    <string name="SendText" tools:ignore="MissingTranslation">Send</string>
+    <string name="ReceiveText" tools:ignore="MissingTranslation">Receive</string>
+    <string name="ChatHint" tools:ignore="MissingTranslation">Type here</string>
+    <string name="yes" tools:ignore="MissingTranslation">Yes</string>
+    <string name="delete_confirm_msg" tools:ignore="MissingTranslation">Do you want to delete this?</string>
+    <string name="no" tools:ignore="MissingTranslation">No</string>
 
 </resources>
